# btc-hyperchat.com

./: .gitignore  LICENSE.MD  README.md  gradle.properties  semantic-build-versioning.gradle  settings.gradle.kts
backend/backend/: Cargo.toml
backend/backend/migrations/00000000000000_diesel_initial_setup/: up.sql
backend/backend/migrations/2022-08-29-134910_users/: up.sql
backend/backend/migrations/2022-08-29-134928_btc_chats/: up.sql
backend/backend/migrations/2022-09-06-071403_stores/: up.sql
backend/backend/migrations/2022-09-26-114306_called_store_webhooks/: up.sql
backend/backend/src/: app_context.rs  main.rs
backend/backend/src/client/: clients.rs  mod.rs
backend/backend/src/config/: btc_pay.rs  config.rs  database.rs  general.rs  invoice.rs  keycloak.rs  mod.rs  server.rs  test_webhook.rs  websocket.rs
backend/backend/src/data/: mod.rs  repos.rs  schema.rs
backend/backend/src/data/model/: btc_chat.rs  mod.rs  store.rs  user.rs
backend/backend/src/data/repository/: btc_chat.rs  db_connection.rs  db_event.rs  mod.rs  store.rs  user.rs
backend/backend/src/web/: mod.rs  security.rs
backend/backend/src/web/controller/: mod.rs  user.rs
backend/backend/src/web/controller/btc_chat/: mod.rs  register_btc_chat.rs
backend/backend/src/web/controller/profile/: find_profiles.rs  get_profile.rs  mod.rs  top_profiles.rs
backend/backend/src/web/controller/settings/: delete_account.rs  mod.rs
backend/backend/src/web/model/: mod.rs
backend/backend/src/web/model/btc_chat/: mod.rs
backend/backend/src/web/model/invoice/: mod.rs
backend/backend/src/web/model/profile/: find_profile_names_response.rs  mod.rs  profile.rs
backend/backend/src/web/model/settings/: mod.rs  store_webhook_test_result.rs
backend/backend/src/web/service/: mod.rs
backend/btcpay-rust/: Cargo.toml
backend/btcpay-rust/.openapi-generator/: FILES
backend/btcpay-rust/src/models/: payment.rs  payment_status.rs  webhook_invoice_event.rs  webhook_invoice_invalid_event.rs  webhook_invoice_received_payment_event.rs  webhook_invoice_settled_event.rs
(+322 files in other folders)
