[package]
name = "btc-chat-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_urlencoded = { version = "^0.6" }
clap = "2.33.1"
argfile = "0.1.3"
wild = "2.0.4"
simple_logger = "1.15.1"
log = "0.4.14"
diesel = { version = "1.4.8", features = ["postgres", "numeric", "chrono", "uuidv07", "r2d2"] }
simple-error = "0.1.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
qrcode-generator = "4.1.2"
mime = "0.3.16"
lightning-invoice = "0.14.0"
anyhow = "1.0.52"
rand = "0.8.0"
futures = "0.3.5"
derive_more = "0.99.9"
async-trait = "0.1.52"
itertools = "0.10.3"
thiserror = "1.0.30"
bigdecimal = "0.1.2"
bitcoin = { version = "0.29.1", features = ["rand"] }
regex = "1"
keycloak = "19.0"
actix-cors = "0.6.2"
strum = "0.24"
strum_macros = "0.24"

btcpay_rust = { path = "../btcpay-rust" }
hex-literal = "0.3.4"
hex = "0.4.3"
sha2 = "0.10.5"
hmac = "0.12.1"
futures-util = "0.3.24"

actix-web-httpauth = "0.8.0"
actix-web = "4.1.0"
actix = "0.13"
jsonwebtoken = "8.1.1"
actix-web-middleware-keycloak-auth = { version = "0.4.0", features = ["paperclip_compat"] }
actix-web-actors = "4.1"
sanitize_html = "0.7.0"

handlebars = "3"
validator = { version = "0.15", features = ["derive"] }


