[package]
name = "btcpay_rust"
version = "1.0.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
actix-web-httpauth = "0.8.0"
actix-web = "4.1.0"
paperclip = { version = "0.7.1", features = ["actix4", "swagger-ui"] }


[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
